Cleanups release make target.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 SUBDIRS = examples
 
 EXTRA_DIST = \
-    common tests servers tools setup.py debian/ README.md ips-cell.spec \
+    common tests servers tools setup.py debian/ README.md \
     .project .pydevproject bootstrap
 
 # TODO(masato.taruishi) Make this configurable
@@ -41,39 +41,6 @@ install-data-local: buildinfo
 
 deb:
 	debuild -b -us -uc
-
-rpm: dist
-	rpmbuild -ta $(DIST_ARCHIVES)
-
-deb-release: import
-	git-buildpackage --git-pbuilder -sa
-	git-buildpackage --git-pbuilder -sa --git-tag
-	debsign
-
-import:
-	git checkout develop
-	./bootstrap
-	./configure
-	make dist
-	make distclean
-	/bin/rm -rf \
-	    Makefile.in \
-	    aclocal.m4 \
-	    configure \
-	    examples/Makefile.in \
-	    install-sh \
-	    missing \
-	    autom4te.cache/
-
-	git checkout upstream
-	-git tag -d upstream/$(VERSION)
-	mv $(distdir).tar.gz ..
-	-mv ../$(PACKAGE)_$(VERSION).orig.tar.gz /tmp/
-	git-import-orig ../ips-cell-0.tar.gz
-
-	git checkout master
-	git-dch -a -R --git-author
-	git commit -a -m 'Updated the changelog for the new release'
 
 clean-local:
 	srcdir=$(srcdir) $(PYTHON) $(srcdir)/setup.py clean
