--- a/debian/control
+++ b/debian/control
@@ -56,5 +56,8 @@ Description: Induced Pluripotent Stem Computing Cell - Manager
 Package: varzd
 Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, python-ips
-Description: Induced Pluripotent Stem Computing Cell - Manager
- This package contains necessary files for iPS Manager.
+Description: Induced Pluripotent Stem Computing Cell - Simple monitoring daemon
+ This package contains varzd daemon which collects system information in
+ the same format used in iPS cell monitoring. By install this daemon, you
+ can monitor your own system which is not a part of iPS cells, in iPS cell
+ monitoring framework.
